# csv-parser

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
include/: CSVParser.h
input/: force_curve.csv
src/: CSVParser.cpp
tests/: unit_tests.cpp
